<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pusher Test App</string>
    <string name="title_activity_about">Pusher - Powering realtime</string>
    <string name="label_pusher_status">Pusher</string>
    <string name="label_net_status">Internet</string>
    <string name="label_ssl">SSL</string>
    <string name="label_reconnect">Auto-reconnect</string>
    <string name="text_btn_connect">Connect</string>
    <string name="text_btn_event">Trigger event</string>
    <string name="text_btn_clear_log">Clear logs</string>
    <string name="text_btn_email_log">Email Support</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="action_about">About</string>


    <string name="label_build_using">
        Built using pusher-java-client:
        \nhttp://github.com/pusher/pusher-java-client
    </string>
    <string name="email_pusher">support@pusher.com</string>
    <string name="weburl_pusher">http://pusher.com</string>

</resources>
